# gtm-signal-agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
docs/: arthur-tracing.md  deployment-plan.md  icp.md  phase1-decisions.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_ashby_ticker.py  0003_digest_table.py  0004_workday_config.py  0005_target_tier.py  0006_alert_cooldown.py  0007_competitor_customers.py
scripts/: flush_digest.py  flush_review_queue.py  import_icp_csv.py  populate_ats_slugs.py  populate_tickers.py  post_deploy.sh  process_pending.py  refresh_competitor_customers.py  run_pipeline.py  setup_hubspot.py
signal_agent/: __init__.py  config.py  db.py  models.py  schemas.py
signal_agent/accounts/: resolver.py
signal_agent/api/: main.py  slack_interactivity.py
signal_agent/ingestors/: ashby.py  base.py  competitive.py  conferences.py  greenhouse.py  html_util.py  keywords.py  lever.py  linkedin.py  news.py  registry.py  sec_edgar.py  workday.py
signal_agent/integrations/: hubspot.py  slack.py
signal_agent/observability/: tracing.py
signal_agent/quality/: circuit_breaker.py  competitor_customers.py  digest.py  suppression.py
signal_agent/scoring/: rubric.py  scorer.py  validator.py
signal_agent/seeds/: competitor_customers_overrides.yaml  (+5 more)
slack/: README.md  manifest.yaml
tests/: test_alert_decision.py  test_competitive.py  test_competitor_customers.py  test_digest.py  test_html_util.py  test_keywords.py  test_news_ingestor.py  test_rubric.py  test_sec_edgar.py  test_slack_blocks.py  test_suppression.py
(+4 files in other folders)
